test_suite5/ALAN/test_suite/alan-2022-examples/failing/003700_mutation.alan
source V begin if 2 then relax get y end
